# ParadoxaDirecta

./: .gitignore  .gitmodules  CMakeLists.txt  ParadoxaDirecta_zh_CN.ts  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/launcher/: citiesprocess.cpp  citiesprocess.h  main.cpp
src/main/: consts.h  settings.cpp  settings.h  translatedapplication.cpp  translatedapplication.h
src/settings/: main.cpp  settings.qrc  settingswindow.cpp  settingswindow.h  settingswindow.ui  settingswindow_slots.cpp
src/uninstaller/: main.cpp  uninstallerprocess.cpp  uninstallerprocess.h
